# entix-template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/scenes/: main.scn
cmake/: build_config_files.cmake
src/: main.cpp
src/assets/: app.cfg
src/assets/scenes/: main.scn
